--- a/index.html
+++ b/index.html
@@ -1,140 +1,214 @@
 <!DOCTYPE html>
 <html lang="ja">
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>宝探し（A-Frame・視線で回収・スマホVR対応）</title>
-  <!-- A-Frame CDN -->
-  <script src="https://aframe.io/releases/1.4.0/aframe.min.js"></script>
-  <!-- 便利なアニメーション用コンポーネント（公式） -->
-  <script src="https://cdn.jsdelivr.net/npm/aframe-animation-component@5.1.0/dist/aframe-animation-component.min.js"></script>
-  <style>
-    html, body { margin: 0; height: 100%; background: #000; }
-  </style>
-</head>
-<body>
-  <a-scene renderer="antialias: true" background="color: #CFE9FF">
-    <!-- アセット管理 -->
-    <a-assets>
-      <audio id="ping" src="https://cdn.jsdelivr.net/gh/naptha/tinyfiles@master/audio/ui/confirm.wav"></audio>
-      <img id="skyTex" src="https://images.unsplash.com/photo-1500530855697-b586d89ba3ee?q=80&w=1920&auto=format&fit=crop" crossorigin="anonymous"/>
-    </a-assets>
+  <head>
+    <meta charset="utf-8" />
+    <title>Kawaii Treasure Room</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>
+    <style>
+      body { margin:0; background:#ffeef6; }
+      .hud { position:fixed; left:0; right:0; top:0; padding:10px; font-family: system-ui, sans-serif; color:#7a2c4e; text-align:center; pointer-events:none; }
+    </style>
+  </head>
+  <body>
+    <div class="hud">中央の丸で狙ってクリックしてね</div>
 
-    <!-- 空と地面 -->
-    <a-sky src="#skyTex"></a-sky>
-    <a-plane position="0 0 0" rotation="-90 0 0" width="40" height="40" color="#A7E5C0" shadow="receive: true"></a-plane>
+    <a-scene renderer="colorManagement: true; physicallyCorrectLights: true" background="color: #FFF7FB">
+      <!-- アセット置き場 -->
+      <a-assets>
+        <!-- 短いクリック音（必要なら自前のmp3/oggに差し替えOK） -->
+        <audio id="ping" src="https://cdn.jsdelivr.net/gh/naptha/tiny-sfx@latest/ping.mp3" preload="auto" crossorigin="anonymous"></audio>
+        <!-- ふわっとUI用フォント（A-Frame内蔵でもOK） -->
+        <img id="wallpaper" crossorigin="anonymous"
+             src="https://images.unsplash.com/photo-1523419409543-a5e549c1b2b9?q=80&w=1200&auto=format&fit=crop" />
+      </a-assets>
 
-    <!-- 説明テキスト＆スコア表示 -->
-    <a-entity id="ui" position="0 2 -1.2">
-      <a-entity id="title" text="value: 宝探しへようこそ！; align: center; width: 3.5; color: #222;" position="0 0.35 0"></a-entity>
-      <a-entity id="hint" text="value: ☆ 5コの宝ものを見つめて回収しよう！; align: center; width: 3.2; color: #333;"></a-entity>
-      <a-entity id="score" text="value: 0 / 5; align: center; width: 3; color: #1a5d1a;" position="0 -0.35 0"></a-entity>
-    </a-entity>
+      <!-- ライト -->
+      <a-entity light="type: ambient; intensity: 0.6; color: #ffffff"></a-entity>
+      <a-entity light="type: directional; intensity: 0.8; castShadow: true" position="2 3 1"></a-entity>
 
-    <!-- カメラ＆視線カーソル（Cardboard向け：中心にリング。視線を1.2秒あてるとクリック=回収） -->
-    <a-entity id="rig" position="0 1.6 0">
-      <a-entity id="camera" camera look-controls>
-        <a-entity id="cursor"
-                  cursor="fuse: true; fuseTimeout: 1200"
-                  position="0 0 -0.7"
-                  geometry="primitive: ring; radiusInner: 0.01; radiusOuter: 0.015"
-                  material="color: #ffffff; shader: flat; opacity: 0.9">
-          <!-- 視線が当たっている間、カーソルを少し大きくするアニメ -->
-          <a-animation begin="cursor-fusing" attribute="scale" dur="1200" from="1 1 1" to="1.5 1.5 1.5" fill="forwards"></a-animation>
-          <a-animation begin="click" attribute="scale" dur="200" to="1 1 1"></a-animation>
-        </a-entity>
+      <!-- かわいい部屋（内側表示） -->
+      <a-box id="room" width="12" height="4" depth="12"
+             position="0 2 -2"
+             material="side: back; color: #FFF1F8; roughness:1; metalness:0"></a-box>
+
+      <!-- 床＆ラグ -->
+      <a-plane rotation="-90 0 0" width="11.8" height="11.8" position="0 0 -2"
+               material="color:#FFF4F9; roughness:1"></a-plane>
+      <a-circle position="0 0.01 -2" rotation="-90 0 0" radius="2.2"
+                material="color:#FFD7E2"></a-circle>
+
+      <!-- 窓（壁紙パネル） -->
+      <a-plane position="0 2 -7.9" width="4.8" height="2.7"
+               material="src: #wallpaper; color:#ffffff"></a-plane>
+
+      <!-- 小家具（かわいい配色の箱） -->
+      <a-box position="-3 0.6 -5" depth="1.2" height="1.2" width="2"
+             material="color:#E7C7FF"></a-box>
+      <a-cylinder position="3 0.5 -4.5" radius="0.45" height="1"
+                  material="color:#C5F1FF"></a-cylinder>
+
+      <!-- サウンド再生用エンティティ（コードから鳴らす） -->
+      <a-entity id="sfx" sound="src: #ping; volume: 0.7"></a-entity>
+
+      <!-- カメラ（クリック可能カーソル＆レイキャスト） -->
+      <a-entity id="rig" position="0 1.6 3">
+        <a-camera wasd-controls-enabled="false">
+          <a-cursor
+            fuse="false"
+            raycaster="objects: .treasure"
+            material="color: #7a2c4e; shader: flat"
+          ></a-cursor>
+        </a-camera>
       </a-entity>
-    </a-entity>
 
-    <!-- 宝物（トーラス：金色コイン風） -->
-    <a-entity id="treasures"></a-entity>
+      <!-- スコアUI（3D内テキスト） -->
+      <a-entity id="ui" position="0 2.6 -1.2">
+        <a-plane width="1.6" height="0.48" color="#FFD7E2" material="opacity:0.9" position="0 0 0"></a-plane>
+        <a-entity id="score" text="value: 0 / 5; color: #7a2c4e; align: center; width: 3" position="0 0 0.01"></a-entity>
+      </a-entity>
 
-    <!-- ちょっとした飾り（やさしい木） -->
-    <a-cylinder position="-3 1 -6" radius="0.3" height="2" color="#8B5A2B"></a-cylinder>
-    <a-sphere position="-3 2.5 -6" radius="1.2" color="#2EC4B6"></a-sphere>
+      <!-- おめでとうUI -->
+      <a-entity id="congrats" visible="false" position="0 1.9 -1.4">
+        <a-plane width="2.4" height="1.2" color="#C5F1FF" material="opacity:0.95" position="0 0 0"></a-plane>
+        <a-entity text="value: やったー！ぜんぶ見つけたよ！; color:#2a3350; align:center; width:4" position="0 0.25 0.01"></a-entity>
+        <a-entity text="value: もう一回; color:#2a3350; align:center; width:3" position="0 -0.15 0.01"></a-entity>
+        <a-plane id="restartBtn" class="ui-btn" position="0 -0.45 0.02" width="1.2" height="0.34" color="#FFF1F8"></a-plane>
+      </a-entity>
 
-    <!-- 成功メッセージ（最初は非表示） -->
-    <a-entity id="congrats" visible="false" position="0 2 -2" animation__pop="property: scale; to: 1.2 1.2 1.2; dir: alternate; dur: 700; loop: true">
-      <a-entity text="value: ぜんぶ見つけた！; align: center; width: 5; color: #e91e63"></a-entity>
-    </a-entity>
+      <!-- 生成先コンテナ -->
+      <a-entity id="treasures"></a-entity>
 
-    <!-- 影（軽量化のため最小限） -->
-    <a-entity light="type: ambient; intensity: 0.9"></a-entity>
-    <a-entity light="type: directional; intensity: 0.5" position="0 5 -5"></a-entity>
+      <!-- クローン用の「かわいいブロブ」テンプレ -->
+      <a-entity id="blobTemplate" visible="false" scale="1 1 1">
+        <!-- もちっとボディ -->
+        <a-sphere radius="0.35" position="0 0 0" material="color:#FFD1E5; roughness:0.9; metalness:0"></a-sphere>
+        <!-- おめめ -->
+        <a-sphere radius="0.04" position="-0.09 0.05 0.3" material="color:#2a3350"></a-sphere>
+        <a-sphere radius="0.04" position="0.09 0.05 0.3" material="color:#2a3350"></a-sphere>
+        <!-- ほっぺ -->
+        <a-sphere radius="0.05" position="-0.18 -0.03 0.26" material="color:#FFA6C1"></a-sphere>
+        <a-sphere radius="0.05" position="0.18 -0.03 0.26" material="color:#FFA6C1"></a-sphere>
+        <!-- くるくる回転 -->
+        <a-entity animation="property: rotation; to: 0 360 0; loop: true; dur: 5000; easing: linear"></a-entity>
+      </a-entity>
 
-    <script>
-      // ====== 収集用コンポーネント ======
-      AFRAME.registerComponent('collectible', {
-        schema: { index: {type: 'int'} },
-        init: function () {
-          const el = this.el;
-          el.addEventListener('click', () => {
-            if (!el.getAttribute('visible')) return;
+      <script>
+        // ========= 設定 =========
+        const TOTAL = 5;
+        let found = 0;
 
-            // サウンド再生
-            const snd = document.querySelector('#ping');
-            if (snd) { const a = new Audio(snd.getAttribute('src')); a.play().catch(()=>{}); }
+        // 収集可能コンポーネント
+        AFRAME.registerComponent('collectible', {
+          schema: { index: { type: 'int' } },
+          init: function () {
+            const el = this.el;
+            // ホバー時ふわっと
+            el.setAttribute('animation__hover', 'property: scale; startEvents: mouseenter; to: 1.2 1.2 1.2; dur: 150; easing: easeOutQuad');
+            el.setAttribute('animation__unhover', 'property: scale; startEvents: mouseleave; to: 1 1 1; dur: 150; easing: easeOutQuad');
 
-            // 小さくなって消えるアニメーション
-            el.setAttribute('animation__shrink', {
-              property: 'scale', to: '0.01 0.01 0.01', dur: 300, easing: 'easeOutQuad'
+            el.addEventListener('click', () => {
+              if (!el.getAttribute('visible')) return;
+
+              // サウンド再生（A-Frameのsoundを確実に再生）
+              const sfx = document.querySelector('#sfx');
+              if (sfx && sfx.components && sfx.components.sound) {
+                try { sfx.components.sound.stopSound(); sfx.components.sound.playSound(); } catch(e){}
+              }
+
+              // 小さくなって消える
+              el.setAttribute('animation__shrink', {
+                property: 'scale', to: '0.01 0.01 0.01', dur: 220, easing: 'easeOutQuad'
+              });
+              setTimeout(() => {
+                el.setAttribute('visible', false);
+                updateScore();
+              }, 240);
             });
-            setTimeout(() => {
-              el.setAttribute('visible', false);
-              updateScore();
-            }, 320);
-          });
+          }
+        });
+
+        // スコア更新＆お祝い表示
+        function updateScore() {
+          found += 1;
+          const score = document.querySelector('#score');
+          if (score) score.setAttribute('text', 'value', `${found} / ${TOTAL}`);
+
+          if (found >= TOTAL) {
+            const ui = document.querySelector('#ui');
+            const c = document.querySelector('#congrats');
+            if (ui) ui.setAttribute('visible', false);
+            if (c) {
+              c.setAttribute('visible', true);
+              // ふわっと登場
+              c.setAttribute('animation__pop', 'property: scale; from: 0.6 0.6 0.6; to: 1 1 1; dur: 220; easing: easeOutBack');
+            }
+          }
         }
-      });
 
-      const TOTAL = 5;
-      let found = 0;
+        // もう一回ボタン
+        document.addEventListener('DOMContentLoaded', () => {
+          const btn = document.querySelector('#restartBtn');
+          if (btn) {
+            btn.classList.add('ui-btn');
+            btn.setAttribute('hoverable', '');
+            btn.addEventListener('click', restartGame);
+          }
+        });
 
-      function updateScore() {
-        found += 1;
-        const score = document.querySelector('#score');
-        score.setAttribute('text', 'value', `${found} / ${TOTAL}`);
-        if (found >= TOTAL) {
-          document.querySelector('#ui').setAttribute('visible', false);
+        function restartGame() {
+          // 初期化
+          found = 0;
+          const score = document.querySelector('#score');
+          if (score) score.setAttribute('text', 'value', `${found} / ${TOTAL}`);
+          const ui = document.querySelector('#ui');
           const c = document.querySelector('#congrats');
-          c.setAttribute('visible', true);
+          if (ui) ui.setAttribute('visible', true);
+          if (c) c.setAttribute('visible', false);
+
+          // 再配置
+          clearTreasures();
+          spawnTreasures();
         }
-      }
 
-      // ====== 宝物をランダム配置 ======
-      function spawnTreasures() {
-        const parent = document.querySelector('#treasures');
-        const radius = 6; // プレイヤーの周囲半径
-        for (let i = 0; i < TOTAL; i++) {
-          const angle = (i / TOTAL) * Math.PI * 2 + (Math.random() * 0.6);
-          const dist = radius + (Math.random() * 2 - 1); // 5〜7mくらい
-          const x = Math.cos(angle) * dist;
-          const z = -Math.sin(angle) * dist - 2; // やや前方に集める
-          const y = 0.8 + Math.random() * 1.2; // 高さ0.8〜2.0m
-
-          const coin = document.createElement('a-entity');
-          coin.setAttribute('class', 'treasure');
-          coin.setAttribute('position', `${x} ${y} ${z}`);
-          coin.setAttribute('rotation', `0 ${Math.random()*360} 0`);
-
-          // 金色コイン風（トーラス）
-          coin.setAttribute('geometry', 'primitive: torus; radius: 0.35; radiusTubular: 0.08; arc: 360');
-          coin.setAttribute('material', 'color: #FFC107; metalness: 0.4; roughness: 0.2');
-
-          // くるくる回転
-          coin.setAttribute('animation__spin', 'property: rotation; to: 0 360 0; loop: true; dur: 4000; easing: linear');
-
-          // 見つめたときに少し大きく
-          coin.setAttribute('animation__hover', 'property: scale; startEvents: mouseenter; to: 1.2 1.2 1.2; dur: 200');
-          coin.setAttribute('animation__unhover', 'property: scale; startEvents: mouseleave; to: 1 1 1; dur: 200');
-
-          coin.setAttribute('collectible', `index: ${i}`);
-          parent.appendChild(coin);
+        function clearTreasures() {
+          const parent = document.querySelector('#treasures');
+          if (!parent) return;
+          while (parent.firstChild) parent.removeChild(parent.firstChild);
         }
-      }
 
-      spawnTreasures();
-    </script>
-  </a-scene>
-</body>
+        // ====== かわいい宝物をランダム配置 ======
+        function spawnTreasures() {
+          const parent = document.querySelector('#treasures');
+          const tmpl = document.querySelector('#blobTemplate');
+          if (!parent || !tmpl) return;
+
+          const radius = 3.8; // プレイヤーの周囲半径（部屋に合わせて）
+          for (let i = 0; i < TOTAL; i++) {
+            const angle = (i / TOTAL) * Math.PI * 2 + (Math.random() * 0.8);
+            const dist = radius + (Math.random() * 1.2 - 0.6); // ±0.6
+            const x = Math.cos(angle) * dist;
+            const z = -Math.sin(angle) * dist - 2; // 前方中心
+            const y = 0.7 + Math.random() * 1.1; // 0.7〜1.8m
+
+            const blob = tmpl.cloneNode(true);
+            blob.id = ''; // 重複回避
+            blob.classList.add('treasure');
+            blob.setAttribute('visible', true);
+            blob.setAttribute('position', `${x} ${y} ${z}`);
+            blob.setAttribute('rotation', `0 ${Math.random()*360} 0`);
+            blob.setAttribute('collectible', `index: ${i}`);
+
+            // くるくる回転（個別に付与）
+            blob.setAttribute('animation__spin', 'property: rotation; to: 0 360 0; loop: true; dur: 5000; easing: linear');
+
+            parent.appendChild(blob);
+          }
+        }
+
+        // 起動
+        spawnTreasures();
+      </script>
+    </a-scene>
+  </body>
 </html>
